syntax = "proto3";

package seo.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "api/seo/v1";

service Seo {
  rpc GetDoctorSeoData(GetDoctorSeoDataRequest) returns (GetDoctorSeoDataResponse) {
    option (google.api.http) = {get: "/api/v1/seo/{doctor_slug}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение SEO информации для карточки врача"};
  }
  rpc GetFreelancersSeoData(GetFreelancersSeoDataRequest) returns (GetFreelancersSeoDataResponse) {
    option (google.api.http) = {get: "/api/v1/freelancers/seo/{freelancers_slug}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение SEO информации для карточки специалиста"};
  }
  rpc GetSitemapInfo(GetSitemapInfoRequest) returns (GetSitemapInfoResponse) {
    option (google.api.http) = {get: "/api/v1/seo/sitemap_info"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение урлов для генерации sitemap"};
  }
}

message GetDoctorSeoDataRequest {
  string doctor_slug = 1;
}

message GetDoctorSeoDataResponse {
  string title = 1;
  string description = 2;
  string image = 3;
}

message GetFreelancersSeoDataRequest {
  string freelancers_slug = 1;
}

message GetFreelancersSeoDataResponse {
  string title = 1;
  string description = 2;
  string image = 3;
}

message GetSitemapInfoRequest {}
message GetSitemapInfoResponse {
  repeated SitemapItem items = 1;

  message SitemapItem {
    string url = 1;
    string last_updated = 2;
    string change_freq = 3;
    string priority = 4;
  }
}
